--- a/languages/reference_file.txt
+++ b/languages/reference_file.txt
@@ -9,4 +9,117 @@ Hello World--- new string ---
 <b>--- Categories ---</b>
 <i> start here </i>/categories--- new string ---
 Accept term and conditions. /privacy_policy
- /accept /decline
+ /accept /decline--- new string ---
+- Privacy Policy -
+
+I care about the privacy of the users so I decided to collect less information as possible from the users.
+
+1. Who is collecting the data?
+The bot has access to the messages you send him and to the messages in a group chat directed to the bot himself. The bot will collect and store only your telgram id (hashed) and the chat id with the bot (necessary to reply to you). The data that the user generates are to be considered public so I have no responsability on such data.
+
+2. What data is being collected?
+The telegram id (stored securely on a remote server) and the bot-user chatid.
+
+3. What is the legal basis for processing the data?
+???
+
+4. Will the data be shared with any third parties?
+No, the data will stay on the server.
+
+5. How will the information be used?
+The data provided will only be used to make the bot work (message redirecting, identification, ...)
+
+6. How long will the data be stored for?
+The data (telegram id, bot-user chat id), will be kept on the servers as long as we can (so you won't lose your profile). Yet you can ask us to delete your data and they will be erased from the bot memory.
+If the user is inactive (interrupted the conversation to the bot), the data might be deleted, depending on space requirements.
+
+7. What rights does the data subject have?
+You have the right of information (I will provide a text file with your data when requested), the right to erase your data.
+
+8. How can the data subject raise a complaint?
+write @PmPellaBot or @Pellostyle
+
+cheers,
+the author, @Pellostyle
+
+
+--- new string ---
+Are you sure you want to remove your data?--- new string ---
+<b> Main Menu </b>
+<i> Chose a category to vote or see the media in it</i>
+
+<b>--- Categories ---</b>
+<i> start here </i>
+/categories
+<b>--- Profile ---</b>
+<i> Your profile </i>
+/profile
+
+--- new string ---
+<b> User Profile </b>
+<i> Manage your accoutn</i>
+
+<b> -- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores <\i>/remove_account--- new string ---
+<b> User Profile </b>
+<i> Manage your accoutn</i>
+
+<b> -- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>/remove_account--- new string ---
+<b>Main Menu </b>
+<i>Chose a category to vote or see the media in it</i>
+
+<b>--- Categories ---</b>
+<i> start here </i>
+/categories
+
+<b>--- Profile ---</b>
+<i> Your profile </i>
+/profile
+
+--- new string ---
+<b>User Profile </b>
+<i>Manage your accout</i>
+<i>Change nickname</i>/set_nickname
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+Send a new nickname. The nickname has to be between 3 and 15 characters. And can contain only alphanumeric values (a-z, A-Z, 0-9).--- new string ---
+Nickname changed successfully--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: {anond_id}</i>
+<i>Change nickname</i>
+/set_nickname
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: {anon_id}</i>
+<i>Change nickname</i>
+/set_nickname
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+Nickname error: invalid character--- new string ---
+Nickname error: too short--- new string ---
+Nickname error: too long--- new string ---
+Nickname error: not unique--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: {anon_id}</i>
+<i>Change nickname</i> /set_nickname
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+All data removed--- new string ---
+<b> Welcome to the Happy Rate Bot </b>In this bot you can upload your content and let the other users in the bot community to rate the content. The bot is subdivided in categories (which you can create). The bot will not disclose who is using it, you will be masked by an anonymous id.
+Accept term and conditions.
+For more information you can read the /privacy_policy
+/accept       /decline--- new string ---
+<b> Welcome to the Happy Rate Bot </b>
+In this bot you can upload your content and let the other users in the bot community to rate the content. The bot is subdivided in categories (which you can create). The bot will not disclose who is using it, you will be masked by an anonymous id.
+
+Accept terms and conditions:
+For more information you can read the /privacy_policy
+
+/accept       /decline
