--- a/languages/reference_file.txt
+++ b/languages/reference_file.txt
@@ -256,4 +256,68 @@ hello
 Uploader: Pella
 Category: hello
 0 up - 0 down | Score: 0.0
-/main_menu
+/main_menu--- new string ---
+Category not found
+/upload--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: 1221786348</i>
+<i>Change nickname</i> /set_nickname
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: 349469045</i>
+<i>Change nickname</i> /set_nickname
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+<b>Send a category name</b>
+<i>The name must be maximum 15 characters long and can contain only alphanumeric characters (a-z and A-Z and 1-10)</i>
+
+Create a category will cost 0 you have 0  ₽
+/cancel
+--- new string ---
+Create category error: too short--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: 4156202834</i>
+<i>Change nickname</i> /set_nickname
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: 1762991954</i>
+<i>Change nickname</i> /set_nickname
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: 1376857120</i>
+<i>Change nickname</i> /set_nickname
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account
