--- a/languages/reference_file.txt
+++ b/languages/reference_file.txt
@@ -1184,4 +1184,70 @@ Repuation: 1K⚜️
 
 <b>--- delete profile ---</b>
 <i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: Pella</i>
+<i>Change nickname</i> /set_nickname
+
+Coins: 33 ₽
+Karma: 107🌀
+Shield points: 1🔰
+Repuation: 107⚜️
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+<b>Send a category name</b>
+<i>The name must be maximum 15 characters long and can contain only alphanumeric characters (a-z and A-Z and 1-10)</i>
+
+Create a category will cost 10 you have 33 ₽
+/cancel
+--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: Pella</i>
+<i>Change nickname</i> /set_nickname
+
+Coins: 33 ₽
+Karma: 102🌀
+Shield points: 1🔰
+Repuation: 102⚜️
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+Uploader: {display_id}
+Category: {category}
+Score: {score}
+/main_menu || /vote_{category}--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: Pella</i>
+<i>Change nickname</i> /set_nickname
+
+Coins: 33 ₽
+Karma: 102🌀
+Shield points: 1🔰
+Repuation: 102⚜️
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- User Top ---</b>
+<i> The bot top chart </i>
+/user_top
+
+<b>--- Uploaded media ---</b>
+<i> The media you uploaded to the bot </i>
+/uploaded_media
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
 /remove_account
