--- a/languages/reference_file.txt
+++ b/languages/reference_file.txt
@@ -1250,4 +1250,78 @@ Repuation: 102⚜️
 
 <b>--- delete profile ---</b>
 <i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: 3280135080</i>
+<i>Change nickname</i> /set_nickname
+
+Coins: 0 ₽
+Karma: 0🌀
+Shield points: 1🔰
+Repuation: 0⚜️
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- User Top ---</b>
+<i> The bot top chart </i>
+/user_top
+
+<b>--- Uploaded media ---</b>
+<i> The media you uploaded to the bot </i>
+/uploaded_media
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+Somebody upvoted your media. You received 1 ₽--- new string ---
+You voted a media. You received 1 ₽--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: Pella</i>
+<i>Change nickname</i> /set_nickname
+
+Coins: 36 ₽
+Karma: 603🌀
+Shield points: 1🔰
+Repuation: 603⚜️
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- User Top ---</b>
+<i> The bot top chart </i>
+/user_top
+
+<b>--- Uploaded media ---</b>
+<i> The media you uploaded to the bot </i>
+/uploaded_media
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
+/remove_account--- new string ---
+<b>User Profile </b>
+<i>Your anonymous id is: 3280135080</i>
+<i>Change nickname</i> /set_nickname
+
+Coins: 2 ₽
+Karma: 0🌀
+Shield points: 1🔰
+Repuation: 0⚜️
+
+<b>--- Create category ---</b>
+<i> You can create your own categories </i>
+/create_category
+
+<b>--- User Top ---</b>
+<i> The bot top chart </i>
+/user_top
+
+<b>--- Uploaded media ---</b>
+<i> The media you uploaded to the bot </i>
+/uploaded_media
+
+<b>--- delete profile ---</b>
+<i> this action will delete every file you uploaded and reset all scores </i>
 /remove_account
